--- a/index.html
+++ b/index.html
@@ -82,11 +82,10 @@
         </div>
 
       <script>
-        async function runPython() {
-          await pyscript.runPythonAsync("extract_py()");
-        }
 
-        
+        async function runPython() {
+          await pyodide.runPythonAsync("extract_py()");
+        }
 
         function clearInput() {
         document.getElementById("urlInput").value = "";
@@ -105,7 +104,7 @@
         }
       </script>
       
-      <py-script>
+      <script type="py">
       import pandas as pd
       import random
       from pyodide.http import open_url
@@ -159,7 +158,7 @@
           result = generate_sentence()
           document.getElementById("result").textContent = result
           document.getElementById("resultWrapper").style.display = "block"
-      </py-script>
+      </script>
 
 
       <p>
