--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
 
       <script>
 
-        async function runPython() {
-          await pyodide.runPythonAsync("extract_py()");
+          function runPython() {
+          pyscript.runPython("extract_py()");
         }
 
         function clearInput() {
@@ -104,7 +104,7 @@
         }
       </script>
       
-      <script type="py">
+      <py-script>
       import pandas as pd
       import random
       from pyodide.http import open_url
@@ -158,7 +158,7 @@
           result = generate_sentence()
           document.getElementById("result").textContent = result
           document.getElementById("resultWrapper").style.display = "block"
-      </script>
+      </py-script>
 
 
       <p>
