--- a/index.html
+++ b/index.html
@@ -90,48 +90,245 @@
 
       // ===== 品詞マップ（そのまま）=====
       const posMap = {
-        "補助記号-読点": "dokuten",
-        "補助記号-句点": "kuten",
-        "助詞-係助詞": "keijyoshi",
-        "助詞-接続助詞": "setsuzokujyoshi",
-        "助詞-格助詞": "kakujyoshi",
-        "助詞-準体助詞": "jyuntaijyoshi",
-        "動詞-非自立可能": "doushi_hijiritsu",
-        "名詞-普通名詞-一般": "hutsuumeishi_ippan",
-        "補助記号-括弧開": "kakkokai",
-        "補助記号-括弧閉": "kakkotoji",
-        "空白": "kuuhaku",
-        "代名詞": "daimeishi",
-        "助動詞": "jyodoushi",
-        "連体詞": "rentaishi",
-        "形容詞-非自立可能": "keiyoushi_hijiritsu",
-        "助詞-終助詞": "syuujyoshi",
-        "名詞-固有名詞-人名-一般": "jinmei_ippan",
-        "感動詞-一般": "kanndoushi_ippan",
-        "助詞-副助詞": "hukujyoshi",
-        "形状詞-助動詞語幹": "keijyoushi_jyodoushigokan",
-        "名詞-数詞": "suushi",
-        "接頭辞": "settouji",
-        "動詞-一般": "doushi_ippan",
-        "副詞": "hukushi",
-        "接尾辞-名詞的-一般": "setsubiji_meishiteki_ippan",
-        "名詞-普通名詞-副詞可能": "meishi_hutsuumeishi_hukushikanou",
-        "名詞-普通名詞-サ変可能": "meishi_hutsuumeishi_sahenkanou",
-        "名詞-普通名詞-助数詞可能": "meishi_hutsuumeishi_jyosuushikanou",
-        "接続詞": "setsuzokushi",
-        "接尾辞-名詞的-助数詞": "setsubiji_meishiteki_jyosuushi",
-        "補助記号-一般": "hojyokigou_ippan",
-        "形容詞-一般": "keijyoushi_ippan",
-        "名詞-固有名詞-地名-一般": "meishi_koyuumeishi_chimei_ippan",
-        "形状詞-一般": "keijyoushi_ippan",
-        "名詞-固有名詞-人名-姓": "meishi_koyuumeishi_jinmei_sei",
-        "名詞-普通名詞-形状詞可能": "meishi_hutsuumeishi_keijyoushikanou",
-        "記号-一般": "kigou_ippan",
-        "感動詞-フィラー": "kandoushi_fira-",
-        "接尾辞-名詞的-サ変可能": "setsubiji_meishiteki_sahenkanou",
-        "形状詞-タリ": "keijyoushi_tari",
-        "名詞-固有名詞-一般": "meishi_koyuumeishi_ippan",
-        "名詞-固有名詞-人名-名": "meishi_koyuumeishi_jinmei_mei"
+    "補助記号-読点-*-*-*-*": "hojyokigou_読点",
+    "補助記号-句点-*-*-*-*": "hojyokigou_句点",
+    "助詞-係助詞-*-*-*-*": "jyoshi_係助詞",
+    "助詞-接続助詞-*-*-*-*": "jyoshi_接続助詞",
+    "助詞-格助詞-*-*-*-*": "jyoshi_格助詞",
+    "助動詞-*-*-*-助動詞-タ-終止形-一般": "jyodoushi_jyodoushi_タ_syuushikei_ippan",
+    "助動詞-*-*-*-助動詞-ダ-終止形-一般": "jyodoushi_jyodoushi_ダ_syuushikei_ippan",
+    "助詞-準体助詞-*-*-*-*": "jyoshi_準体助詞",
+    "代名詞-*-*-*-*-*": "daimeishi",
+    "名詞-普通名詞-一般-*-*-*": "meishi_hutsuumeishi_ippan",
+    "動詞-非自立可能-*-*-サ行変格-連用形-一般": "doushi_非自立可能_sagyouhenkaku_rennyoukei_ippan",
+    "補助記号-括弧開-*-*-*-*": "hojyokigou_括弧開",
+    "補助記号-括弧閉-*-*-*-*": "hojyokigou_括弧閉",
+    "助動詞-*-*-*-助動詞-タ-連体形-一般": "jyodoushi_jyodoushi_タ_renntaikei_ippan",
+    "助動詞-*-*-*-助動詞-ダ-連用形-一般": "jyodoushi_jyodoushi_ダ_rennyoukei_ippan",
+    "空白-*-*-*-*-*": "kuuhaku",
+    "助動詞-*-*-*-助動詞-ダ-連体形-一般": "jyodoushi_jyodoushi_ダ_renntaikei_ippan",
+    "助動詞-*-*-*-助動詞-ヌ-終止形-一般": "jyodoushi_jyodoushi_ヌ_syuushikei_ippan",
+    "助動詞-*-*-*-助動詞-ダ-連用形-ニ": "jyodoushi_jyodoushi_ダ_rennyoukei_ニ",
+    "動詞-非自立可能-*-*-上一段-ア行-終止形-一般": "doushi_非自立可能_kamiichidan_agyou_syuushikei_ippan",
+    "連体詞-*-*-*-*-*": "renntaishi",
+    "動詞-非自立可能-*-*-カ行変格-連用形-一般": "doushi_非自立可能_kagyouhenkaku_rennyoukei_ippan",
+    "動詞-非自立可能-*-*-五段-ラ行-連用形-促音便": "doushi_非自立可能_godan_ragyou_rennyoukei_sokuonbin",
+    "助詞-終助詞-*-*-*-*": "jyoshi_終助詞",
+    "助動詞-*-*-*-助動詞-レル-連用形-一般": "jyodoushi_jyodoushi_レル_rennyoukei_ippan",
+    "助動詞-*-*-*-助動詞-ナイ-終止形-一般": "jyodoushi_jyodoushi_ナイ_syuushikei_ippan",
+    "動詞-非自立可能-*-*-五段-ラ行-未然形-一般": "doushi_非自立可能_godan_ragyou_mizenkei_ippan",
+    "動詞-非自立可能-*-*-五段-ラ行-終止形-一般": "doushi_非自立可能_godan_ragyou_syuushikei_ippan",
+    "形容詞-非自立可能-*-*-形容詞-終止形-一般": "keiyoushi_非自立可能_keiyoushi_syuushikei_ippan",
+    "名詞-固有名詞-人名-一般-*-*": "meishi_koyuumeishi_jinmei_ippan",
+    "感動詞-一般-*-*-*-*": "kandoushi_ippan",
+    "動詞-非自立可能-*-*-上一段-ア行-連用形-一般": "doushi_非自立可能_kamiichidan_agyou_rennyoukei_ippan",
+    "助詞-副助詞-*-*-*-*": "jyoshi_副助詞",
+    "動詞-非自立可能-*-*-上一段-ア行-連体形-一般": "doushi_非自立可能_kamiichidan_agyou_renntaikei_ippan",
+    "助動詞-*-*-*-助動詞-マス-終止形-一般": "jyodoushi_jyodoushi_マス_syuushikei_ippan",
+    "形状詞-助動詞語幹-*-*-*-*": "keijoushi_助動詞語幹",
+    "名詞-数詞-*-*-*-*": "meishi_suushi",
+    "副詞-*-*-*-*-*": "fukushi",
+    "接頭辞-*-*-*-*-*": "settouji",
+    "名詞-普通名詞-副詞可能-*-*-*": "meishi_hutsuumeishi_fukushikanou",
+    "名詞-普通名詞-サ変可能-*-*-*": "meishi_hutsuumeishi_sahenkanou",
+    "動詞-一般-*-*-五段-ラ行-連用形-促音便": "doushi_ippan_godan_ragyou_rennyoukei_sokuonbin",
+    "助動詞-*-*-*-助動詞-デス-終止形-一般": "jyodoushi_jyodoushi_デス_syuushikei_ippan",
+    "接尾辞-名詞的-一般-*-*-*": "setsubiji_名詞的_ippan",
+    "助動詞-*-*-*-助動詞-タ-仮定形-一般": "jyodoushi_jyodoushi_タ_kateikei_ippan",
+    "動詞-非自立可能-*-*-下一段-ラ行-命令形": "doushi_非自立可能_shimoichidan_ragyou_meireikei",
+    "動詞-一般-*-*-五段-サ行-連用形-一般": "doushi_ippan_godan_sagyou_rennyoukei_ippan",
+    "動詞-非自立可能-*-*-五段-ラ行-命令形": "doushi_非自立可能_godan_ragyou_meireikei",
+    "助動詞-*-*-*-下一段-サ行-連用形-一般": "jyodoushi_shimoichidan_sagyou_rennyoukei_ippan",
+    "動詞-一般-*-*-五段-ラ行-連体形-一般": "doushi_ippan_godan_ragyou_renntaikei_ippan",
+    "助動詞-*-*-*-助動詞-ナイ-仮定形-一般": "jyodoushi_jyodoushi_ナイ_kateikei_ippan",
+    "助動詞-*-*-*-助動詞-ナイ-連用形-促音便": "jyodoushi_jyodoushi_ナイ_rennyoukei_sokuonbin",
+    "動詞-一般-*-*-五段-ワア行-連体形-一般": "doushi_ippan_godan_waagyou_renntaikei_ippan",
+    "動詞-一般-*-*-五段-サ行-未然形-一般": "doushi_ippan_godan_sagyou_mizenkei_ippan",
+    "動詞-非自立可能-*-*-下一段-ラ行-連用形-一般": "doushi_非自立可能_shimoichidan_ragyou_rennyoukei_ippan",
+    "動詞-一般-*-*-サ行変格-連用形-一般": "doushi_ippan_sagyouhenkaku_rennyoukei_ippan",
+    "助動詞-*-*-*-助動詞-ヌ-連体形-一般": "jyodoushi_jyodoushi_ヌ_renntaikei_ippan",
+    "動詞-非自立可能-*-*-五段-ラ行-連用形-イ音便": "doushi_非自立可能_godan_ragyou_rennyoukei_ionbin",
+    "動詞-非自立可能-*-*-上一段-カ行-未然形-一般": "doushi_非自立可能_kamiichidan_kagyou_mizenkei_ippan",
+    "助動詞-*-*-*-助動詞-ヌ-連用形-一般": "jyodoushi_jyodoushi_ヌ_rennyoukei_ippan",
+    "動詞-一般-*-*-五段-タ行-連用形-促音便": "doushi_ippan_godan_tagyou_rennyoukei_sokuonbin",
+    "助動詞-*-*-*-助動詞-ダ-意志推量形": "jyodoushi_jyodoushi_ダ_ishisuuryoukei",
+    "接続詞-*-*-*-*-*": "接続詞",
+    "動詞-一般-*-*-五段-カ行-連用形-イ音便": "doushi_ippan_godan_kagyou_rennyoukei_ionbin",
+    "動詞-一般-*-*-下一段-ダ行-連用形-一般": "doushi_ippan_shimoichidan_dagyou_rennyoukei_ippan",
+    "動詞-非自立可能-*-*-五段-ワア行-連用形-促音便": "doushi_非自立可能_godan_waagyou_rennyoukei_sokuonbin",
+    "形容詞-非自立可能-*-*-形容詞-連体形-一般": "keiyoushi_非自立可能_keiyoushi_renntaikei_ippan",
+    "接尾辞-名詞的-助数詞-*-*-*": "setsubiji_名詞的_助数詞",
+    "動詞-非自立可能-*-*-カ行変格-命令形": "doushi_非自立可能_kagyouhenkaku_meireikei",
+    "動詞-非自立可能-*-*-上一段-カ行-連用形-一般": "doushi_非自立可能_kamiichidan_kagyou_rennyoukei_ippan",
+    "助動詞-*-*-*-助動詞-ナイ-連用形-一般": "jyodoushi_jyodoushi_ナイ_rennyoukei_ippan",
+    "助動詞-*-*-*-助動詞-タイ-終止形-一般": "jyodoushi_jyodoushi_タイ_syuushikei_ippan",
+    "助動詞-*-*-*-助動詞-レル-終止形-一般": "jyodoushi_jyodoushi_レル_syuushikei_ippan",
+    "動詞-一般-*-*-五段-ラ行-命令形": "doushi_ippan_godan_ragyou_meireikei",
+    "名詞-普通名詞-助数詞可能-*-*-*": "meishi_hutsuumeishi_jyosuushikanou",
+    "動詞-一般-*-*-下一段-ア行-連用形-一般": "doushi_ippan_shimoichidan_agyou_rennyoukei_ippan",
+    "助動詞-*-*-*-助動詞-マス-連用形-一般": "jyodoushi_jyodoushi_マス_rennyoukei_ippan",
+    "動詞-非自立可能-*-*-サ行変格-未然形-サ": "doushi_非自立可能_sagyouhenkaku_mizenkei_サ",
+    "動詞-一般-*-*-五段-ワア行-終止形-一般": "doushi_ippan_godan_waagyou_syuushikei_ippan",
+    "動詞-非自立可能-*-*-下一段-ガ行-連用形-一般": "doushi_非自立可能_shimoichidan_gagyou_rennyoukei_ippan",
+    "動詞-非自立可能-*-*-サ行変格-未然形-一般": "doushi_非自立可能_sagyouhenkaku_mizenkei_ippan",
+    "補助記号-一般-*-*-*-*": "hojyokigou_ippan",
+    "助動詞-*-*-*-助動詞-タイ-連体形-一般": "jyodoushi_jyodoushi_タイ_renntaikei_ippan",
+    "助動詞-*-*-*-助動詞-ダ-仮定形-一般": "jyodoushi_jyodoushi_ダ_kateikei_ippan",
+    "動詞-一般-*-*-五段-ワア行-連用形-促音便": "doushi_ippan_godan_waagyou_rennyoukei_sokuonbin",
+    "動詞-一般-*-*-サ行変格-未然形-一般": "doushi_ippan_sagyouhenkaku_mizenkei_ippan",
+    "動詞-非自立可能-*-*-五段-ラ行-連体形-一般": "doushi_非自立可能_godan_ragyou_renntaikei_ippan",
+    "形容詞-非自立可能-*-*-形容詞-連用形-一般": "keiyoushi_非自立可能_keiyoushi_rennyoukei_ippan",
+    "形容詞-一般-*-*-形容詞-連用形-一般": "keiyoushi_ippan_keiyoushi_rennyoukei_ippan",
+    "動詞-一般-*-*-下一段-マ行-連用形-一般": "doushi_ippan_shimoichidan_magyou_rennyoukei_ippan",
+    "助動詞-*-*-*-文語助動詞-ゴトシ-連用形-一般": "jyodoushi_文語助動詞_ゴトシ_rennyoukei_ippan",
+    "動詞-一般-*-*-五段-マ行-未然形-一般": "doushi_ippan_godan_magyou_mizenkei_ippan",
+    "動詞-一般-*-*-五段-ラ行-未然形-一般": "doushi_ippan_godan_ragyou_mizenkei_ippan",
+    "名詞-固有名詞-地名-一般-*-*": "meishi_koyuumeishi_chimei_ippan",
+    "形状詞-一般-*-*-*-*": "keijoushi_ippan",
+    "動詞-非自立可能-*-*-五段-ラ行-連用形-一般": "doushi_非自立可能_godan_ragyou_rennyoukei_ippan",
+    "助動詞-*-*-*-助動詞-マス-未然形-一般": "jyodoushi_jyodoushi_マス_mizenkei_ippan",
+    "動詞-非自立可能-*-*-サ行変格-連体形-一般": "doushi_非自立可能_sagyouhenkaku_renntaikei_ippan",
+    "名詞-普通名詞-形状詞可能-*-*-*": "meishi_hutsuumeishi_keijoushikanou",
+    "助動詞-*-*-*-助動詞-レル-未然形-一般": "jyodoushi_jyodoushi_レル_mizenkei_ippan",
+    "動詞-非自立可能-*-*-五段-カ行-連用形-イ音便": "doushi_非自立可能_godan_kagyou_rennyoukei_ionbin",
+    "動詞-非自立可能-*-*-五段-ラ行-意志推量形": "doushi_非自立可能_godan_ragyou_ishisuuryoukei",
+    "動詞-一般-*-*-五段-ワア行-連用形-一般": "doushi_ippan_godan_waagyou_rennyoukei_ippan",
+    "形容詞-非自立可能-*-*-形容詞-語幹-一般": "keiyoushi_非自立可能_keiyoushi_語幹_ippan",
+    "助動詞-*-*-*-文語助動詞-キ-終止形-一般": "jyodoushi_文語助動詞_キ_syuushikei_ippan",
+    "動詞-一般-*-*-五段-ガ行-連用形-イ音便": "doushi_ippan_godan_gagyou_rennyoukei_ionbin",
+    "動詞-非自立可能-*-*-五段-サ行-連用形-一般": "doushi_非自立可能_godan_sagyou_rennyoukei_ippan",
+    "動詞-非自立可能-*-*-上一段-ア行-未然形-一般": "doushi_非自立可能_kamiichidan_agyou_mizenkei_ippan",
+    "動詞-非自立可能-*-*-下一段-ラ行-未然形-一般": "doushi_非自立可能_shimoichidan_ragyou_mizenkei_ippan",
+    "動詞-非自立可能-*-*-五段-カ行-連用形-一般": "doushi_非自立可能_godan_kagyou_rennyoukei_ippan",
+    "動詞-一般-*-*-下一段-ラ行-連用形-一般": "doushi_ippan_shimoichidan_ragyou_rennyoukei_ippan",
+    "助動詞-*-*-*-助動詞-レル-連体形-一般": "jyodoushi_jyodoushi_レル_renntaikei_ippan",
+    "形容詞-一般-*-*-形容詞-連体形-一般": "keiyoushi_ippan_keiyoushi_renntaikei_ippan",
+    "動詞-一般-*-*-五段-ナ行-連体形-一般": "doushi_ippan_godan_nagyou_renntaikei_ippan",
+    "動詞-一般-*-*-五段-カ行-連用形-一般": "doushi_ippan_godan_kagyou_rennyoukei_ippan",
+    "形容詞-非自立可能-*-*-形容詞-連用形-促音便": "keiyoushi_非自立可能_keiyoushi_rennyoukei_sokuonbin",
+    "動詞-一般-*-*-五段-ナ行-未然形-一般": "doushi_ippan_godan_nagyou_mizenkei_ippan",
+    "動詞-一般-*-*-下一段-ナ行-連用形-一般": "doushi_ippan_shimoichidan_nagyou_rennyoukei_ippan",
+    "動詞-非自立可能-*-*-上一段-マ行-連体形-一般": "doushi_非自立可能_kamiichidan_magyou_renntaikei_ippan",
+    "動詞-非自立可能-*-*-五段-カ行-連体形-一般": "doushi_非自立可能_godan_kagyou_renntaikei_ippan",
+    "動詞-一般-*-*-上一段-タ行-連用形-一般": "doushi_ippan_kamiichidan_tagyou_rennyoukei_ippan",
+    "動詞-一般-*-*-下一段-ア行-未然形-一般": "doushi_ippan_shimoichidan_agyou_mizenkei_ippan",
+    "名詞-固有名詞-人名-姓-*-*": "meishi_koyuumeishi_jinmei_姓",
+    "動詞-非自立可能-*-*-五段-カ行-連用形-促音便": "doushi_非自立可能_godan_kagyou_rennyoukei_sokuonbin",
+    "助動詞-*-*-*-文語助動詞-ベシ-連体形-一般": "jyodoushi_文語助動詞_ベシ_renntaikei_ippan",
+    "動詞-一般-*-*-上一段-バ行-連用形-一般": "doushi_ippan_kamiichidan_bagyou_rennyoukei_ippan",
+    "動詞-一般-*-*-五段-ナ行-終止形-一般": "doushi_ippan_godan_nagyou_syuushikei_ippan",
+    "動詞-非自立可能-*-*-カ行変格-終止形-一般": "doushi_非自立可能_kagyouhenkaku_syuushikei_ippan",
+    "動詞-非自立可能-*-*-カ行変格-連体形-一般": "doushi_非自立可能_kagyouhenkaku_renntaikei_ippan",
+    "動詞-非自立可能-*-*-五段-カ行-意志推量形": "doushi_非自立可能_godan_kagyou_ishisuuryoukei",
+    "動詞-非自立可能-*-*-カ行変格-未然形-一般": "doushi_非自立可能_kagyouhenkaku_mizenkei_ippan",
+    "助動詞-*-*-*-助動詞-ダ-連用形-促音便": "jyodoushi_jyodoushi_ダ_rennyoukei_sokuonbin",
+    "動詞-一般-*-*-五段-タ行-未然形-一般": "doushi_ippan_godan_tagyou_mizenkei_ippan",
+    "動詞-非自立可能-*-*-サ行変格-未然形-セ": "doushi_非自立可能_sagyouhenkaku_mizenkei_セ",
+    "動詞-非自立可能-*-*-下一段-マ行-連用形-一般": "doushi_非自立可能_shimoichidan_magyou_rennyoukei_ippan",
+    "動詞-非自立可能-*-*-五段-カ行-未然形-一般": "doushi_非自立可能_godan_kagyou_mizenkei_ippan",
+    "動詞-非自立可能-*-*-下一段-カ行-連用形-一般": "doushi_非自立可能_shimoichidan_kagyou_rennyoukei_ippan",
+    "動詞-一般-*-*-五段-ナ行-連用形-撥音便": "doushi_ippan_godan_nagyou_rennyoukei_hatsuonbin",
+    "動詞-非自立可能-*-*-サ行変格-仮定形-一般": "doushi_非自立可能_sagyouhenkaku_kateikei_ippan",
+    "動詞-非自立可能-*-*-下一段-サ行-連用形-一般": "doushi_非自立可能_shimoichidan_sagyou_rennyoukei_ippan",
+    "動詞-一般-*-*-五段-マ行-連用形-撥音便": "doushi_ippan_godan_magyou_rennyoukei_hatsuonbin",
+    "動詞-非自立可能-*-*-五段-カ行-終止形-一般": "doushi_非自立可能_godan_kagyou_syuushikei_ippan",
+    "動詞-一般-*-*-五段-ガ行-連用形-一般": "doushi_ippan_godan_gagyou_rennyoukei_ippan",
+    "形容詞-一般-*-*-形容詞-終止形-一般": "keiyoushi_ippan_keiyoushi_syuushikei_ippan",
+    "動詞-一般-*-*-五段-ラ行-連用形-一般": "doushi_ippan_godan_ragyou_rennyoukei_ippan",
+    "動詞-一般-*-*-五段-タ行-命令形": "doushi_ippan_godan_tagyou_meireikei",
+    "動詞-一般-*-*-上一段-ラ行-連用形-一般": "doushi_ippan_kamiichidan_ragyou_rennyoukei_ippan",
+    "動詞-一般-*-*-下一段-カ行-未然形-一般": "doushi_ippan_shimoichidan_kagyou_mizenkei_ippan",
+    "動詞-一般-*-*-五段-ワア行-未然形-一般": "doushi_ippan_godan_waagyou_mizenkei_ippan",
+    "動詞-非自立可能-*-*-下一段-ラ行-終止形-一般": "doushi_非自立可能_shimoichidan_ragyou_syuushikei_ippan",
+    "動詞-非自立可能-*-*-サ行変格-終止形-一般": "doushi_非自立可能_sagyouhenkaku_syuushikei_ippan",
+    "動詞-一般-*-*-五段-マ行-終止形-一般": "doushi_ippan_godan_magyou_syuushikei_ippan",
+    "動詞-一般-*-*-下一段-ア行-終止形-一般": "doushi_ippan_shimoichidan_agyou_syuushikei_ippan",
+    "動詞-一般-*-*-五段-バ行-連用形-撥音便": "doushi_ippan_godan_bagyou_rennyoukei_hatsuonbin",
+    "動詞-一般-*-*-五段-ラ行-終止形-一般": "doushi_ippan_godan_ragyou_syuushikei_ippan",
+    "動詞-一般-*-*-下一段-ガ行-未然形-一般": "doushi_ippan_shimoichidan_gagyou_mizenkei_ippan",
+    "動詞-一般-*-*-五段-カ行-未然形-一般": "doushi_ippan_godan_kagyou_mizenkei_ippan",
+    "動詞-一般-*-*-下一段-ア行-連体形-一般": "doushi_ippan_shimoichidan_agyou_renntaikei_ippan",
+    "動詞-一般-*-*-五段-サ行-連体形-一般": "doushi_ippan_godan_sagyou_renntaikei_ippan",
+    "動詞-一般-*-*-サ行変格-連体形-一般": "doushi_ippan_sagyouhenkaku_renntaikei_ippan",
+    "動詞-一般-*-*-五段-マ行-仮定形-一般": "doushi_ippan_godan_magyou_kateikei_ippan",
+    "動詞-非自立可能-*-*-下一段-カ行-未然形-一般": "doushi_非自立可能_shimoichidan_kagyou_mizenkei_ippan",
+    "動詞-一般-*-*-下一段-バ行-未然形-一般": "doushi_ippan_shimoichidan_bagyou_mizenkei_ippan",
+    "動詞-一般-*-*-五段-ワア行-命令形": "doushi_ippan_godan_waagyou_meireikei",
+    "動詞-一般-*-*-文語四段-タ行-連用形-促音便": "doushi_ippan_bungoyodan_tagyou_rennyoukei_sokuonbin",
+    "形容詞-一般-*-*-形容詞-連用形-促音便": "keiyoushi_ippan_keiyoushi_rennyoukei_sokuonbin",
+    "動詞-一般-*-*-下一段-ラ行-未然形-一般": "doushi_ippan_shimoichidan_ragyou_mizenkei_ippan",
+    "助動詞-*-*-*-助動詞-ジャ-終止形-一般": "jyodoushi_jyodoushi_ジャ_syuushikei_ippan",
+    "動詞-一般-*-*-文語上二段-ダ行-終止形-一般": "doushi_ippan_bungokaminidan_dagyou_syuushikei_ippan",
+    "動詞-一般-*-*-上一段-ア行-連用形-一般": "doushi_ippan_kamiichidan_agyou_rennyoukei_ippan",
+    "助動詞-*-*-*-文語助動詞-リ-連体形-一般": "jyodoushi_文語助動詞_リ_renntaikei_ippan",
+    "動詞-一般-*-*-下一段-カ行-連用形-一般": "doushi_ippan_shimoichidan_kagyou_rennyoukei_ippan",
+    "動詞-非自立可能-*-*-下一段-ガ行-未然形-一般": "doushi_非自立可能_shimoichidan_gagyou_mizenkei_ippan",
+    "動詞-一般-*-*-下一段-ガ行-連用形-一般": "doushi_ippan_shimoichidan_gagyou_rennyoukei_ippan",
+    "動詞-一般-*-*-五段-マ行-連体形-一般": "doushi_ippan_godan_magyou_renntaikei_ippan",
+    "感動詞-フィラー-*-*-*-*": "kandoushi_フィラー",
+    "動詞-一般-*-*-五段-バ行-終止形-一般": "doushi_ippan_godan_bagyou_syuushikei_ippan",
+    "動詞-一般-*-*-五段-サ行-終止形-一般": "doushi_ippan_godan_sagyou_syuushikei_ippan",
+    "助動詞-*-*-*-助動詞-タイ-連用形-一般": "jyodoushi_jyodoushi_タイ_rennyoukei_ippan",
+    "動詞-一般-*-*-五段-ワア行-連用形-ウ音便": "doushi_ippan_godan_waagyou_rennyoukei_uonbin",
+    "動詞-一般-*-*-下一段-サ行-連用形-一般": "doushi_ippan_shimoichidan_sagyou_rennyoukei_ippan",
+    "動詞-一般-*-*-五段-ワア行-意志推量形": "doushi_ippan_godan_waagyou_ishisuuryoukei",
+    "動詞-非自立可能-*-*-下一段-ガ行-終止形-一般": "doushi_非自立可能_shimoichidan_gagyou_syuushikei_ippan",
+    "形容詞-非自立可能-*-*-形容詞-意志推量形": "keiyoushi_非自立可能_keiyoushi_ishisuuryoukei",
+    "動詞-一般-*-*-上一段-カ行-連用形-一般": "doushi_ippan_kamiichidan_kagyou_rennyoukei_ippan",
+    "動詞-一般-*-*-五段-タ行-連体形-一般": "doushi_ippan_godan_tagyou_renntaikei_ippan",
+    "動詞-非自立可能-*-*-五段-ワア行-命令形": "doushi_非自立可能_godan_waagyou_meireikei",
+    "動詞-一般-*-*-下一段-タ行-連用形-一般": "doushi_ippan_shimoichidan_tagyou_rennyoukei_ippan",
+    "動詞-一般-*-*-五段-タ行-連用形-一般": "doushi_ippan_godan_tagyou_rennyoukei_ippan",
+    "接尾辞-名詞的-サ変可能-*-*-*": "setsubiji_名詞的_sahenkanou",
+    "動詞-非自立可能-*-*-サ行変格-意志推量形": "doushi_非自立可能_sagyouhenkaku_ishisuuryoukei",
+    "動詞-非自立可能-*-*-上一段-ア行-意志推量形": "doushi_非自立可能_kamiichidan_agyou_ishisuuryoukei",
+    "助動詞-*-*-*-助動詞-タイ-連用形-促音便": "jyodoushi_jyodoushi_タイ_rennyoukei_sokuonbin",
+    "形状詞-タリ-*-*-*-*": "keijoushi_タリ",
+    "助動詞-*-*-*-助動詞-ラシイ-連体形-一般": "jyodoushi_jyodoushi_ラシイ_renntaikei_ippan",
+    "動詞-一般-*-*-下一段-カ行-終止形-一般": "doushi_ippan_shimoichidan_kagyou_syuushikei_ippan",
+    "動詞-一般-*-*-五段-カ行-連体形-一般": "doushi_ippan_godan_kagyou_renntaikei_ippan",
+    "動詞-非自立可能-*-*-上一段-ア行-命令形": "doushi_非自立可能_kamiichidan_agyou_meireikei",
+    "動詞-非自立可能-*-*-下一段-ガ行-意志推量形": "doushi_非自立可能_shimoichidan_gagyou_ishisuuryoukei",
+    "動詞-非自立可能-*-*-五段-ワア行-終止形-一般": "doushi_非自立可能_godan_waagyou_syuushikei_ippan",
+    "動詞-一般-*-*-五段-マ行-連用形-一般": "doushi_ippan_godan_magyou_rennyoukei_ippan",
+    "動詞-非自立可能-*-*-カ行変格-仮定形-一般": "doushi_非自立可能_kagyouhenkaku_kateikei_ippan",
+    "動詞-一般-*-*-五段-カ行-仮定形-一般": "doushi_ippan_godan_kagyou_kateikei_ippan",
+    "動詞-一般-*-*-五段-ガ行-連体形-一般": "doushi_ippan_godan_gagyou_renntaikei_ippan",
+    "動詞-一般-*-*-五段-カ行-意志推量形": "doushi_ippan_godan_kagyou_ishisuuryoukei",
+    "動詞-非自立可能-*-*-上一段-マ行-命令形": "doushi_非自立可能_kamiichidan_magyou_meireikei",
+    "動詞-非自立可能-*-*-下一段-ガ行-連体形-一般": "doushi_非自立可能_shimoichidan_gagyou_renntaikei_ippan",
+    "動詞-非自立可能-*-*-上一段-マ行-連用形-一般": "doushi_非自立可能_kamiichidan_magyou_rennyoukei_ippan",
+    "動詞-非自立可能-*-*-上一段-ガ行-連用形-一般": "doushi_非自立可能_kamiichidan_gagyou_rennyoukei_ippan",
+    "動詞-非自立可能-*-*-五段-ワア行-未然形-一般": "doushi_非自立可能_godan_waagyou_mizenkei_ippan",
+    "動詞-非自立可能-*-*-下一段-サ行-終止形-一般": "doushi_非自立可能_shimoichidan_sagyou_syuushikei_ippan",
+    "動詞-一般-*-*-五段-ワア行-仮定形-一般": "doushi_ippan_godan_waagyou_kateikei_ippan",
+    "動詞-一般-*-*-五段-サ行-命令形": "doushi_ippan_godan_sagyou_meireikei",
+    "動詞-非自立可能-*-*-五段-カ行-命令形": "doushi_非自立可能_godan_kagyou_meireikei",
+    "名詞-固有名詞-一般-*-*-*": "meishi_koyuumeishi_ippan",
+    "動詞-非自立可能-*-*-上一段-カ行-連体形-一般": "doushi_非自立可能_kamiichidan_kagyou_renntaikei_ippan",
+    "動詞-一般-*-*-下一段-ラ行-連体形-一般": "doushi_ippan_shimoichidan_ragyou_renntaikei_ippan",
+    "助動詞-*-*-*-助動詞-ナイ-連体形-一般": "jyodoushi_jyodoushi_ナイ_renntaikei_ippan",
+    "動詞-非自立可能-*-*-文語四段-ハ行-終止形-ウ音便": "doushi_非自立可能_bungoyodan_hagyou_syuushikei_uonbin",
+    "動詞-非自立可能-*-*-上一段-マ行-終止形-一般": "doushi_非自立可能_kamiichidan_magyou_syuushikei_ippan",
+    "名詞-固有名詞-人名-名-*-*": "meishi_koyuumeishi_jinmei_名",
+    "動詞-非自立可能-*-*-上一段-マ行-仮定形-一般": "doushi_非自立可能_kamiichidan_magyou_kateikei_ippan",
+    "動詞-一般-*-*-上一段-カ行-終止形-一般": "doushi_ippan_kamiichidan_kagyou_syuushikei_ippan",
+    "動詞-非自立可能-*-*-五段-ラ行-未然形-撥音便": "doushi_非自立可能_godan_ragyou_mizenkei_hatsuonbin",
+    "助動詞-*-*-*-文語助動詞-ヌ-連体形-一般": "jyodoushi_文語助動詞_ヌ_renntaikei_ippan",
+    "助動詞-*-*-*-助動詞-ラシイ-終止形-一般": "jyodoushi_jyodoushi_ラシイ_syuushikei_ippan",
+    "動詞-一般-*-*-上一段-ア行-未然形-一般": "doushi_ippan_kamiichidan_agyou_mizenkei_ippan",
+    "動詞-非自立可能-*-*-上一段-カ行-終止形-一般": "doushi_非自立可能_kamiichidan_kagyou_syuushikei_ippan",
+    "動詞-一般-*-*-五段-ガ行-命令形": "doushi_ippan_godan_gagyou_meireikei",
+    "助動詞-*-*-*-助動詞-ヌ-終止形-撥音便": "jyodoushi_jyodoushi_ヌ_syuushikei_hatsuonbin",
+    "動詞-一般-*-*-下一段-カ行-連体形-一般": "doushi_ippan_shimoichidan_kagyou_renntaikei_ippan",
+    "動詞-一般-*-*-下一段-ア行-意志推量形": "doushi_ippan_shimoichidan_agyou_ishisuuryoukei",
+    "動詞-一般-*-*-下一段-タ行-未然形-一般": "doushi_ippan_shimoichidan_tagyou_mizenkei_ippan",
+    "動詞-一般-*-*-五段-バ行-連用形-一般": "doushi_ippan_godan_bagyou_rennyoukei_ippan",
+    "動詞-一般-*-*-下一段-バ行-連用形-一般": "doushi_ippan_shimoichidan_bagyou_rennyoukei_ippan",
+    "助動詞-*-*-*-助動詞-マイ-終止形-一般": "jyodoushi_jyodoushi_マイ_syuushikei_ippan",
+    "助動詞-*-*-*-助動詞-ダ-連用形-融合": "jyodoushi_jyodoushi_ダ_rennyoukei_融合",
+    "動詞-非自立可能-*-*-上一段-マ行-未然形-一般": "doushi_非自立可能_kamiichidan_magyou_mizenkei_ippan"
+}
       };
 
       // ===== 初期化 =====
@@ -143,7 +340,7 @@
 
       // ===== CSV 読み込み =====
       async function loadCSV() {
-        const res = await fetch("./merosukaiseki.csv");
+        const res = await fetch("./merosukaiseki_sudachi.csv");
         const text = await res.text();
         const lines = text.split("\n");
         lines.shift(); // header
